--- a/index.html
+++ b/index.html
@@ -5,56 +5,66 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Monitoreo de Empleo - Región NEA</title>
     <style>
-        body {
-            font-family: "Segoe UI", sans-serif;
-            line-height: 1.6;
-            margin: 0;
-            padding: 0;
-            background-color: #f4f4f9;
-            color: #333;
-        }
-        header {
-            background-color: #023047;
-            color: white;
-            padding: 20px;
-            text-align: center;
-        }
-        main {
-            max-width: 900px;
-            margin: auto;
-            padding: 20px;
-        }
-        section {
-            margin-bottom: 40px;
-        }
-        h2 {
-            color: #023047;
-            border-bottom: 2px solid #8ecae6;
-            padding-bottom: 5px;
-        }
-        iframe {
-            width: 100%;
-            height: 500px;
-            border: none;
-        }
-        .pdf-link {
-            display: inline-block;
-            padding: 12px 20px;
-            background-color: #219ebc;
-            color: white;
-            text-decoration: none;
-            border-radius: 8px;
-            font-weight: bold;
-        }
-        .pdf-link:hover {
-            background-color: #126782;
-        }
-        footer {
-            text-align: center;
-            padding: 10px;
-            background-color: #e0e0e0;
-            font-size: 0.9em;
-        }
+       body { 
+		   font-family: "Segoe UI", sans-serif; 
+		   line-height: 1.8; 
+		   margin: 0; 
+		   padding: 0; 
+		   background-color: var(--fondo); 
+		   color: var(--texto); 
+		} 
+		
+		header { 
+			background-color: var(--lila-principal); 
+			color: white; 
+			padding: 40px 20px; 
+			text-align: center; 
+			box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1); 
+		} 
+		
+		h1 { 
+			margin: 0 0 10px; 
+			font-size: 2rem; 
+		} 
+		
+		h2 { color: var(--lila-principal); 
+			border-bottom: 3px solid var(--lila-secundario); 
+			padding-bottom: 8px; 
+			margin-bottom: 20px; 
+			font-size: 1.5rem; 
+		} 
+		
+		main { 
+			max-width: 950px; 
+			margin: 50px auto; 
+			padding: 0 25px; 
+		} 
+		
+		section { 
+			margin-bottom: 60px; 
+		} 
+		
+		p { 
+			margin-bottom: 25px; 
+			text-align: justify; 
+		} 
+		
+		iframe { 
+			width: 100%; 
+			height: 500px; 
+			border: none; 
+			border-radius: 8px; 
+			box-shadow: 0 4px 10px rgba(0, 0, 0, 0.08); 
+		} 
+		
+		footer { 
+			text-align: center; 
+			padding: 20px; 
+			background-color: var(--lila-secundario); 
+			color: white; 
+			font-size: 0.95em; 
+			letter-spacing: 0.3px; 
+		}
     </style>
 </head>
 <body>
@@ -67,14 +77,18 @@
 <main>
     <section id="introduccion">
         <h2>Introducción</h2>
-        <p>
-            En la primera página del tablero se presenta la cantidad total de empleos por departamento para cada rama de actividad económica declarada en el Censo 2022. Esta visualización permite identificar la distribución espacial del empleo dentro del Nordeste Argentino (NEA), brindando una perspectiva comparativa entre departamentos. Al mostrar el número absoluto de ocupaciones, se facilita el reconocimiento de los territorios con mayor densidad laboral y de aquellos con estructuras productivas más diversificadas o concentradas en determinadas actividades. Esta información es especialmente relevante para analizar la estructura económica regional y las diferencias en la magnitud del empleo entre jurisdicciones.
+    <p>
+        En la primera página del tablero se presenta la cantidad total de empleos por departamento para cada rama de actividad económica declarada en el Censo 2022. Esta visualización permite identificar la distribución espacial del empleo dentro del Nordeste Argentino (NEA), brindando una perspectiva comparativa entre departamentos. Al mostrar el número absoluto de ocupaciones, se facilita el reconocimiento de los territorios con mayor densidad laboral y de aquellos con estructuras productivas más diversificadas o concentradas en determinadas actividades. Esta información es especialmente relevante para analizar la estructura económica regional y las diferencias en la magnitud del empleo entre jurisdicciones.
+    </p>
 
-	La segunda página del tablero expone el peso relativo de cada actividad dentro del empleo total del departamento. Es decir, muestra el porcentaje de personas ocupadas que se desempeñan en la actividad seleccionada respecto del total de empleos del departamento. Este enfoque permite evaluar la especialización productiva local, ya que un alto porcentaje indica que una porción significativa de la población ocupada depende de dicha actividad. Visualizar esta proporción resulta intuitivo porque revela la importancia económica y social de cada sector dentro del entramado laboral departamental, permitiendo inferir posibles vulnerabilidades frente a cambios sectoriales o fluctuaciones de la demanda.
+    <p>
+        La segunda página del tablero expone el peso relativo de cada actividad dentro del empleo total del departamento. Es decir, muestra el porcentaje de personas ocupadas que se desempeñan en la actividad seleccionada respecto del total de empleos del departamento. Este enfoque permite evaluar la especialización productiva local, ya que un alto porcentaje indica que una porción significativa de la población ocupada depende de dicha actividad. Visualizar esta proporción resulta intuitivo porque revela la importancia económica y social de cada sector dentro del entramado laboral departamental, permitiendo inferir posibles vulnerabilidades frente a cambios sectoriales o fluctuaciones de la demanda.
+    </p>
 
-	Por último, la tercera página muestra la concentración territorial de la actividad seleccionada a nivel provincial. En este caso, se identifican los departamentos donde se concentra la mayor parte del empleo correspondiente a esa actividad. Este tipo de visualización facilita comprender la distribución geográfica del empleo sectorial dentro de cada provincia, destacando los polos de mayor dinamismo o los núcleos productivos específicos. Desde una perspectiva analítica, esta información es útil para reconocer patrones de aglomeración económica, evaluar la localización de los sectores productivos y orientar estrategias de desarrollo regional basadas en la especialización y complementariedad territorial.
-        </p>
-    </section>
+    <p>
+        Por último, la tercera página muestra la concentración territorial de la actividad seleccionada a nivel provincial. En este caso, se identifican los departamentos donde se concentra la mayor parte del empleo correspondiente a esa actividad. Este tipo de visualización facilita comprender la distribución geográfica del empleo sectorial dentro de cada provincia, destacando los polos de mayor dinamismo o los núcleos productivos específicos. Desde una perspectiva analítica, esta información es útil para reconocer patrones de aglomeración económica, evaluar la localización de los sectores productivos y orientar estrategias de desarrollo regional basadas en la especialización y complementariedad territorial.
+    </p>
+</section>
 
     <section id="tablero">
         <h2>Tablero Interactivo</h2>
@@ -87,3 +101,4 @@
 
 </body>
 </html>
+
