--- a/index.html
+++ b/index.html
@@ -5,20 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Monitoreo de Empleo - Región NEA</title>
     <style>
-       body { 
-		   font-family: "Segoe UI", sans-serif; 
-		   line-height: 1.8; 
-		   margin: 0; 
-		   padding: 0; 
-		   background-color: var(--fondo); 
-		   color: var(--texto); 
+		body { 
+			font-family: "Segoe UI", sans-serif; 
+			line-height: 1.6; 
+			margin: 0; 
+			padding: 0; 
+			background-color: #f4f4f9; 
+			color: #333; 
 		} 
-		
 		header { 
-			background-color: var(--lila-principal); 
+			background-color: #023047; 
 			color: white; 
-			padding: 40px 20px; 
-			text-align: center; 
+			padding: 20px; 
+			text-align: center;
 			box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1); 
 		} 
 		
@@ -101,4 +100,5 @@
 
 </body>
 </html>
+
 
