--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <style>
 		body { 
 			font-family: "Segoe UI", sans-serif; 
-			line-height: 1.6; 
+			line-height: 1.8; 
 			margin: 0; 
 			padding: 0; 
 			background-color: #f4f4f9; 
@@ -70,7 +70,7 @@
 
 <header>
     <h1>Monitoreo de Empleo - Región NEA</h1>
-    <p>Octubre de 2025</p>
+    <p style="text-align: center;">Octubre 2025</p>
 </header>
 
 <main>
@@ -100,6 +100,7 @@
 
 </body>
 </html>
+
 
 
 
